Done with basic security (filter, provider, config)